[project]
name = "panaversity-ai-assistant"
version = "0.1.0"
description = "Panaversity AI Assistant with Gemini and Chainlit"
requires-python = ">=3.11"

dependencies = [
    "chainlit>=2.9.2",
    "openai>=2.8.1", 
    "python-dotenv>=1.2.1",
    "agents>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"